Embedding code uploaded

--- a/kneegrowthplate_measures.ipynb
+++ b/kneegrowthplate_measures.ipynb
@@ -670,7 +670,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.7 (main, Dec 15 2023, 18:12:31) [GCC 11.2.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
